# netgear-vlan-admin

./: README.md  pyproject.toml  vlan-admin.py
vlan_admin/: log.py  main.py  vlan_admin.py
vlan_admin/backends/: common.py  fs726t.py  snmp.py
vlan_admin/snmp-mibs/GS324Tx-v1.0.0.43-Mibs/: P-BRIDGE-MIB  Q-BRIDGE-MIB  README.md
vlan_admin/ui/: main.py  widgets.py
