[tool.poetry]
name = "vlan-admin"
version = "0.1.0-dev"
description = ""
authors = ["Matthijs Kooijman <matthijs@stdin.nl>"]
readme = "README.md"
packages = [{include = "vlan_admin"}]
repository = "https://github.com/matthijskooijman/netgear-vlan-admin"
include = [
    { path = "vlan_admin/snmp-mibs", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.8"
configobj = "^5.0"
beautifulsoup4 = "^4.4"
urwid = "^2.0"
lxml = "^4.0"

snimpy = {version = "^1.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vlan-admin = "vlan_admin.main:main"

[tool.poetry.extras]
snmp = ["snimpy"]
